Re-work the module init and destroy code to allow it to be unloaded and then reloaded.

Should fix PR kern/49842